--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-Br">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Dyêgo Links</title>
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-    <img src="https://github.com/dyegopetronio.png" alt="Imagem do Dyêgo Petronio"/>
-    <h1>Dyêgo Petronio</h1>
-    <p>@dyegopetronio</p>
+    <div class="container">
+      <img
+        class="avatar"
+        src="https://github.com/dyegopetronio.png"
+        alt="Imagem do Dyêgo Petronio"
+      />
+      <h1>Dyêgo Petronio</h1>
+      <p class="username">@dyegopetronio</p>
 
-    <ul>
-      <li><a href="#" target="_blank">📹 Youtube</a></li>
-      <li><a href="#" target="_blank">📷 Instagram</a></li>
-      <li><a href="#" target="_blank">🙍‍♂️ Facebook</a></li>
-      <li><a href="#" target="_blank">😺 Github</a></li>
-    </ul>
+      <ul>
+        <li><a href="#" target="_blank">📹 Youtube</a></li>
+        <li><a href="#" target="_blank">📷 Instagram</a></li>
+        <li><a href="#" target="_blank">🙍‍♂️ Facebook</a></li>
+        <li><a href="#" target="_blank">😺 Github</a></li>
+      </ul>
 
-    <footer>Feito com 💜 pela <a href="" target="_blank">Rocketseat</a></footer>
-
+      <footer>
+        Feito com 💜 pela <a href="" target="_blank">Rocketseat</a>
+      </footer>
+    </div>
   </body>
-
 </html>
