finalização do projeto 2

--- a/index.html
+++ b/index.html
@@ -73,10 +73,28 @@
       <p class="username">@dyegopetronio</p>
 
       <ul>
-        <li><a href="#" target="_blank">📹 Youtube</a></li>
-        <li><a href="#" target="_blank">📷 Instagram</a></li>
-        <li><a href="#" target="_blank">🙍‍♂️ Facebook</a></li>
-        <li><a href="#" target="_blank">😺 Github</a></li>
+        <li>
+          <a
+            href="https://www.youtube.com/channel/UCf2zoxb7AH6WGYqOd2FgGaw/featured"
+            target="_blank"
+            >📹 Youtube</a
+          >
+        </li>
+        <li>
+          <a href="https://www.instagram.com/dyegopetronio/" target="_blank"
+            >📷 Instagram</a
+          >
+        </li>
+        <li>
+          <a href="https://www.tiktok.com/@dipetronio" target="_blank"
+            >🙍‍♂️ TikTok</a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/dyegopetronio/" target="_blank"
+            >😺 Github</a
+          >
+        </li>
       </ul>
 
       <footer>
